--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "name": "express-mesh",
   "description": "A Gentics Mesh frontend for Express.",
   "license": "MIT",
-  "version": "0.1.3",
+  "version": "0.1.4",
+  "engines" : { "node" : ">=4.0.0" },
   "dependencies": {
     "express": "4.13.3",
     "express-session": "1.12.1",
