--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "author": "Gentics Software, branch of APA-IT",
+  "author": "Gentics Zweigstelle der APA-IT",
   "name": "express-mesh",
   "description": "A Gentics Mesh frontend for Express.",
   "license": "MIT",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "engines" : { "node" : ">=4.0.0" },
   "dependencies": {
     "express": "4.13.3",
