--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Gentics Mesh frontend for Express.",
   "license": "MIT",
   "version": "0.1.14",
-  "engines" : { "node" : ">=4.0.0" },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "dependencies": {
     "express": "4.13.3",
     "express-session": "1.12.1",
@@ -13,6 +15,7 @@
   },
   "devDependencies": {
     "gulp": "~3.6.1",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "~2.2.0",
     "gulp-debug": "^2.1.2",
     "gulp-rimraf": "*",
@@ -28,7 +31,7 @@
     "run-sequence": "^1.1.5"
   },
   "main": "index.js",
-  "typings":"./index.d.ts",
+  "typings": "./index.d.ts",
   "directories": {
     "doc": "doc"
   },
