--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "author": "Gentics Zweigstelle der APA-IT",
+  "author": "Gentics Software",
   "name": "express-mesh",
   "description": "A Gentics Mesh frontend for Express.",
   "license": "MIT",
-  "version": "0.1.25",
+  "version": "0.2.0",
   "engines": {
     "node": ">=4.0.0"
   },
