--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "engines": {
     "node": ">=4.0.0"
   },
+  "scripts": {
+    "build": "gulp build",
+    "package": "gulp package",
+    "watch": "gulp watch"
+  },
   "dependencies": {
     "express": "4.13.3",
     "express-session": "1.12.1",
