--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "express": "4.13.3",
     "express-session": "1.12.1",
-    "moment": "2.10.6",
+    "moment": "^2.21.0",
     "q": "^1.4.1"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "gulp-concat": "~2.2.0",
     "gulp-debug": "^2.1.2",
     "gulp-rimraf": "*",
-    "gulp-strip-debug": "*",
+    "gulp-strip-debug": "^3.0.0",
     "gulp-tslint": "~1.1.0",
     "gulp-tslint-stylish": "~1.0.1",
     "gulp-typedoc": "^1.2.1",
